<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <Button
        android:id="@+id/bt_getTraslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getTraslate"/>

    <Button
        android:id="@+id/bt_getTraslate_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getTraslate1"
        android:layout_below="@+id/bt_getTraslate"/>

    <Button
        android:id="@+id/bt_getTraslate_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getTraslate2"
        android:layout_below="@+id/bt_getTraslate_1"/>

    <Button
        android:id="@+id/bt_getTraslate_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getTraslate3"
        android:layout_below="@+id/bt_getTraslate_2"/>

    <Button
        android:id="@+id/bt_getTraslate_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getTraslate4"
        android:layout_below="@+id/bt_getTraslate_3"/>

    <Button
        android:id="@+id/bt_getToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getToken"
        android:layout_below="@+id/bt_getTraslate_4"/>

    <Button
        android:id="@+id/bt_getToken_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getToken1"
        android:layout_below="@+id/bt_getToken"/>

    <Button
        android:id="@+id/bt_getToken_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getToken2"
        android:layout_below="@+id/bt_getToken_1"/>

</RelativeLayout>
